Change Animal constructor